<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="3dp">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cartItemImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todom"
            android:scaleType="centerCrop"
            android:src="@drawable/nail1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cartItemName"
                android:text="@string/term_k"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cartItemPrice"
                android:text="@string/_2990_ft"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/removeItemBtn"
            android:src="@android:drawable/ic_delete"
            android:contentDescription="@string/elem_elt_vol_t_sa"
            android:background="@null"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
